fixing bug for background on mobile version

--- a/src/main/webapp/assets/landingpage/css/responsive.css
+++ b/src/main/webapp/assets/landingpage/css/responsive.css
@@ -3,6 +3,9 @@
     padding-top: 0;
     width: 300px; }
 
+  .bg-landingpage {
+    background: #2e272a url(../images/bg-mobile.png) center top repeat; }
+
   .big-bubble {
     width: 100%; }
 
